# open-rmbt-client-cli

./: Cargo.toml  README.md  benchmark.py  mock_control_server.py
.github/workflows/: build.yml  publish-python.yml
clientC/: Dockerfile
clientC/src/: connection.c  main.c  pretest.c  pthread_barrier_compat.h  tests.c
clientPython/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  setup.py
clientPython/rmbt_client/: __main__.py  control.py  pretest.py  rmbt_loop.c  tests.py  uuid_store.py
clientPython/rmbt_nettest/: __main__.py  connection.py  tests.py  uuid_store.py
clientRust/: Dockerfile
clientRust/src/: pretest.rs  tests.rs
src/: connection.rs  control.rs  main.rs  tests.rs
