[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rmbt-client"
dynamic = ["version"]
description = "RMBT network measurement client — performs ping, download, and upload speed tests against an RMBT measurement server"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.7"
authors = [
  { name = "raaaimund" },
]
keywords = ["rmbt", "speedtest", "network", "measurement"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet",
  "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/raaaimund/open-rmbt-client-cli"
Repository = "https://github.com/raaaimund/open-rmbt-client-cli"
Issues = "https://github.com/raaaimund/open-rmbt-client-cli/issues"

[project.scripts]
rmbt-client = "rmbt_client.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "rmbt_client.__version__"}

[tool.setuptools.packages.find]
where = ["."]
